style: change endpoint for user info
