# backend/docs/openapi.yaml
@@ -317,25 +317,6 @@ paths:
         \u0432\u0430\u0442\u0435\u043B\u044F"
       tags:
       - Auth
-  /auth/users/me:
-    get:
-      description: "\u041F\u043E\u043B\u0443\u0447\u0430\u0435\u0442 \u044E\u0437\u0435\
-        \u0440\u0430 \u0438\u0437 access-\u0442\u043E\u043A\u0435\u043D\u0430 \u0438\
-        \ \u043F\u0440\u043E\u0432\u0435\u0440\u044F\u0435\u0442 \u0435\u0433\u043E\
-        \ \u0432 \u0411\u0414"
-      operationId: auth_user_auth_users_me_get
-      responses:
-        '200':
-          content:
-            application/json:
-              schema: {}
-          description: Successful Response
-      security:
-      - HTTPBearer: []
-      summary: "\u0414\u043B\u044F \u0442\u0435\u0441\u0442\u0430, \u043F\u043E\u0442\
-        \u043E\u043C \u0443\u0434\u0430\u043B\u044E!"
-      tags:
-      - Auth
   /auth/yandex/callback:
     post:
       description: "\u041A\u043E\u0434 \u043E\u0442\u043F\u0440\u0430\u0432\u043B\u044F\
@@ -642,3 +623,24 @@ paths:
         \u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435\u043C"
       tags:
       - Meet
+  /users/me:
+    get:
+      description: "\u041F\u043E\u043B\u0443\u0447\u0430\u0435\u0442 \u044E\u0437\u0435\
+        \u0440\u0430 \u0438\u0437 access-\u0442\u043E\u043A\u0435\u043D\u0430, \u043F\
+        \u0440\u043E\u0432\u0435\u0440\u044F\u0435\u0442 \u0435\u0433\u043E \u0432\
+        \ \u0411\u0414 \u0438         \u0432\u043E\u0437\u0432\u0440\u0430\u0449\u0430\
+        \u0435\u0442 \u0435\u0433\u043E \u0434\u0430\u043D\u043D\u044B\u0435"
+      operationId: auth_user_users_me_get
+      responses:
+        '200':
+          content:
+            application/json:
+              schema: {}
+          description: Successful Response
+      security:
+      - HTTPBearer: []
+      summary: "\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E\
+        \ \u0442\u0435\u043A\u0443\u0449\u0435\u043C \u043F\u043E\u043B\u044C\u0437\
+        \u043E\u0432\u0430\u0442\u0435\u043B\u0435"
+      tags:
+      - Users
